--- a/ChooseYourColor/Base.lproj/Main.storyboard
+++ b/ChooseYourColor/Base.lproj/Main.storyboard
@@ -16,13 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jiO-6i-Jgr">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jiO-6i-Jgr">
                                 <rect key="frame" x="16" y="89" width="361" height="241"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jiO-6i-Jgr" secondAttribute="height" multiplier="361:241" id="DSf-gI-qTz"/>
+                                </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="6Q1-2T-mWh">
-                                <rect key="frame" x="16" y="376" width="51" height="127"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="6Q1-2T-mWh">
+                                <rect key="frame" x="16" y="376.66666666666669" width="51" height="127"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Red:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-E4-hhj">
                                         <rect key="frame" x="0.0" y="0.0" width="51" height="20.333333333333332"/>
@@ -31,21 +33,21 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Green:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tHc-CU-pvB">
-                                        <rect key="frame" x="0.0" y="53.333333333333336" width="51" height="20.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="53.333333333333314" width="51" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Blue:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1OX-eD-bff">
-                                        <rect key="frame" x="0.0" y="106.66666666666667" width="51" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="106.66666666666663" width="51" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="Quo-jM-8xG">
-                                <rect key="frame" x="75" y="376" width="41.333333333333343" height="127"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="33" translatesAutoresizingMaskIntoConstraints="NO" id="Quo-jM-8xG">
+                                <rect key="frame" x="75" y="376.66666666666669" width="41.333333333333343" height="127"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pdf-ke-HaS">
                                         <rect key="frame" x="0.0" y="0.0" width="41.333333333333336" height="20.333333333333332"/>
@@ -54,41 +56,41 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAD-r8-na7">
-                                        <rect key="frame" x="0.0" y="53.333333333333336" width="41.333333333333336" height="20.333333333333336"/>
+                                        <rect key="frame" x="0.0" y="53.333333333333314" width="41.333333333333336" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xW-zb-7YX">
-                                        <rect key="frame" x="0.0" y="106.66666666666667" width="41.333333333333336" height="20.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="106.66666666666663" width="41.333333333333336" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="fiK-RE-2LC">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="fiK-RE-2LC">
                                 <rect key="frame" x="131" y="371" width="250" height="138"/>
                                 <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Wg-bX-oTG">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.29999999999999999" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Wg-bX-oTG">
                                         <rect key="frame" x="-2" y="0.0" width="254" height="31"/>
                                         <connections>
-                                            <action selector="changeRedColor" destination="BYZ-38-t0r" eventType="valueChanged" id="hBx-Xa-lWz"/>
+                                            <action selector="changeColorView" destination="BYZ-38-t0r" eventType="valueChanged" id="5wi-Ga-KHE"/>
                                         </connections>
                                     </slider>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="pen-gg-tcI">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.69999999999999996" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="pen-gg-tcI">
                                         <rect key="frame" x="-2" y="54" width="254" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="250" id="BDx-UU-g82"/>
                                         </constraints>
                                         <connections>
-                                            <action selector="changerGreenColor" destination="BYZ-38-t0r" eventType="valueChanged" id="Dll-fU-mOH"/>
+                                            <action selector="changeColorView" destination="BYZ-38-t0r" eventType="valueChanged" id="HhK-9m-Q3u"/>
                                         </connections>
                                     </slider>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8m9-He-151">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.11" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="8m9-He-151">
                                         <rect key="frame" x="-2" y="108" width="254" height="31"/>
                                         <connections>
-                                            <action selector="changeBlueColor" destination="BYZ-38-t0r" eventType="valueChanged" id="zUc-xf-WSz"/>
+                                            <action selector="changeColorView" destination="BYZ-38-t0r" eventType="valueChanged" id="clu-Hp-e7Q"/>
                                         </connections>
                                     </slider>
                                 </subviews>
@@ -96,11 +98,24 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fiK-RE-2LC" secondAttribute="trailing" constant="12" id="2ia-3g-gho"/>
+                            <constraint firstItem="Quo-jM-8xG" firstAttribute="leading" secondItem="6Q1-2T-mWh" secondAttribute="trailing" constant="8" symbolic="YES" id="3qh-jG-vvi"/>
+                            <constraint firstItem="fiK-RE-2LC" firstAttribute="top" secondItem="jiO-6i-Jgr" secondAttribute="bottom" constant="41" id="FB5-FL-ot2"/>
+                            <constraint firstItem="fiK-RE-2LC" firstAttribute="centerY" secondItem="Quo-jM-8xG" secondAttribute="centerY" id="JVc-RM-psY"/>
+                            <constraint firstItem="pen-gg-tcI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="131" id="TXq-5O-YTc"/>
+                            <constraint firstItem="fiK-RE-2LC" firstAttribute="leading" secondItem="Quo-jM-8xG" secondAttribute="trailing" constant="14.666666666666657" id="WaE-xD-JGe"/>
+                            <constraint firstItem="6Q1-2T-mWh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Wv3-rd-5cJ"/>
+                            <constraint firstItem="jiO-6i-Jgr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="ezu-VM-ml7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jiO-6i-Jgr" secondAttribute="trailing" constant="16" id="k20-QA-JrR"/>
+                            <constraint firstItem="fiK-RE-2LC" firstAttribute="centerY" secondItem="6Q1-2T-mWh" secondAttribute="centerY" id="knF-Ol-F1F"/>
+                            <constraint firstItem="jiO-6i-Jgr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="q8a-n8-Maa"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="ColorView" destination="jiO-6i-Jgr" id="cqk-ch-8E0"/>
                         <outlet property="blueLabel" destination="9xW-zb-7YX" id="RcO-mp-b3H"/>
                         <outlet property="blueSlider" destination="8m9-He-151" id="vHD-Uk-lwC"/>
+                        <outlet property="colorView" destination="jiO-6i-Jgr" id="cqk-ch-8E0"/>
                         <outlet property="greenLabel" destination="iAD-r8-na7" id="Cnv-8Q-gUa"/>
                         <outlet property="greenSlider" destination="pen-gg-tcI" id="QFJ-Ir-umi"/>
                         <outlet property="redLabel" destination="Pdf-ke-HaS" id="krO-Hj-Apy"/>
